# WildberriesScraper

./: .gitignore  main.py  pyproject.toml  schemas.py  scrape_wildberries.py  settings.py
routers/: __init__.py
routers/wilberries/: handlers.py  state.py
utils/: __init__.py  get_basket_version.py  google_sheets.py  logger.py
