[tool.poetry]
name = "wildberries"
version = "0.1.0"
description = ""
authors = ["hhhscvx <hhhscvx@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
fake-useragent = "^2.0.3"
pydantic = "^2.10.6"
loguru = "^0.7.3"
aiogram = "^3.17.0"
pydantic-settings = "^2.7.1"
google-api-python-client = "^2.160.0"
oauth2client = "^4.1.3"
gspread = "^6.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
